--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    touch-action: none;
     user-select: none; /* Standard syntax */
     -webkit-user-select: none; /* Safari */
     -moz-user-select: none; /* Firefox */
@@ -17,12 +18,9 @@ canvas {
     top: 0;
     left: 0;
     outline: none;
-
-
 }
 
 .webgl{
-
     z-index: 0;
 }
 
