--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,25 @@
-/* styles.css */
+/*
+:root {
+    --ParentHover: #ddd1b6;
+    --ParentSelected: #e5dcc8;
+    --Parent: #ede7d9;
+    --CustomHover: #f2e7e4;
+    --CustomSelected: #edddd9;
+    --Custom: #f9f4f3;
+    --ButtonHover: #d5a021;
+    --ButtonSelected: #d5a021;
+    --Button: #d5a021;
+    --TextHighlight: #; 
+    --Text: #023047;
+    --Topnav: #ede7d9;
+    --TopnavButton: #d5a021;
+    --TopnavButtonHover: #d5a021;
+    --InfoBoxBackground: #ede7d9;
+    --InfoBoxButton: #d5a021;
+    --InfoBoxButtonHover: #ddb34d;
+    --InfoBoxButtonSelected: #EED9A6;
+}
+*/
 *
 {
     margin: 0;
