--- a/src/style.css
+++ b/src/style.css
@@ -24,7 +24,7 @@
 {
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
+    /*font-family: 'Roboto', sans-serif;*/
     touch-action: none;
     user-select: none; /* Standard syntax */
     -webkit-user-select: none; /* Safari */
