--- a/src/style.css
+++ b/src/style.css
@@ -28,9 +28,11 @@
   /* Preloader */
   #preloader {
     position: fixed;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    background: var(--color-secundario);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #eaeaea;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -180,9 +182,12 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
     overflow: hidden;
+
+    touch-action: none; 
+    width: 100% !important; 
+    height: 100% !important; 
+    display: block;
   }
 
   /* Secciones generales */
